--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,50 @@
 {
     "cSpell.words": [
+        "agroal",
         "arithmatex",
+        "datadir",
         "etra",
+        "fcontext",
+        "firewalld",
         "fontawesome",
+        "gelf",
+        "glightbox",
+        "gsctest",
+        "healthcheck",
+        "includedir",
+        "infinispan",
         "inlinehilite",
+        "innodb",
         "ipaddress",
         "javascripts",
+        "jdbc",
+        "JWTs",
+        "keyout",
         "linenums",
         "markdownextradata",
         "materialx",
         "Mkdocs",
+        "myhostname",
+        "mysqld",
+        "narayana",
+        "newkey",
         "noopener",
+        "noout",
+        "OIDC",
+        "Proto",
+        "pycache",
         "pymdownx",
+        "quarkus",
+        "RDBMS",
+        "reencrypt",
+        "resteasy",
+        "restorecon",
         "Roboto",
+        "semanage",
+        "smallrye",
         "superfences",
-        "twemoji"
+        "tecmint",
+        "twemoji",
+        "vertx"
     ]
 }
