--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: GSC STIG Manager
-site_url: https://zephynyah.github.io/zeph-stigman
+site_url: https://zephynyah.github.io/zeph-stigman/
 site_author: Jason Hickey
 site_description: >-
   Create a branded static site from a set of Markdown files to host the
   documentation of STIG Manager project - customizable, searchable and mobile-friendly
 
-# repo_url: https://github.com/Zephynyah/zeph-opensll-certificate-authority
+repo_url: https://github.com/Zephynyah/zeph-stigman
 
 nav:
   - Home: index.md
@@ -79,11 +79,26 @@ theme:
 plugins:
   - social
   - search
-  # - markdownextradata
+  - glightbox
+  - macros:
+      include_dir: snippets
+  - with-pdf:
+      author: Jason Hickey
+      # copyright: Copyright &copy; 2024 Jason Hickey.
+      cover: true
+      back_cover: true
+      cover_title: GSC STIG Manager
+      cover_subtitle: Installation Documentation
+      cover_logo: assets/images/banner.png
+      heading_shift: false
+      # exclude_pages:
+          # - 'usage/'
 
 markdown_extensions:
+  - md_in_html
+
   - toc:
-      title: "ZEPH"
+      title: "GSC STIG Manager"
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
@@ -101,7 +116,32 @@ markdown_extensions:
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 extra:
-  version: 0.1.1
+  unit:
+    price: 12.50
+  server:
+    hostname: eh-stigman-1
+    ipaddress: 192.168.100.119
+    web: http://eh-stigman-1/
+    https: https://eh-stigman-1
+  realm:
+    name: stigman
+    web: http://eh-stigman-1/
+  stigman:
+    name: stigman
+    web: www.example.com
+    version: 1.4.11
+    upgrade: 1.4.12
+    ipaddress: 192.168.100.119:8080
+    hostname: eh-stigman-1
+    http: http://eh-stigman-1:54000
+    https: https://eh-stigman-1/stigman/
+  keycloak:
+    name: keycloak
+    web: https://www.keycloak.org/
+    version: 24.0.4
+    upgrade: 24.0.5
+    http: http://eh-stigman-1:8080
+    https: https://eh-stigman-1
   social:
     - icon: fontawesome/brands/github-alt
       link: https://github.com/Zephynyah
@@ -114,4 +154,4 @@ extra_css:
 extra_javascript:
   - javascripts/extra.js
 
-copyright: |
+# copyright: |
