--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,23 +28,24 @@ nav:
   - Appendix:
     - appendix/index.md
 theme:
-  name: readthedocs
   name: material
   # custom_dir: material/overrides
+  icon:
+    repo: fontawesome/brands/git-alt
   features:
     - toc.follow
-    - navigation.tabs
-    - navigation.sections
-    - toc.integrate
-    - navigation.top
+    # - toc.integrate
     - search.suggest
     - search.highlight
-    - content.action.edit
     - content.code.annotation
     - content.code.copy
     - content.tabs.link
     - content.tooltips
     - announce.dismiss
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.top
     - navigation.indexes
     - navigation.footer
     - navigation.path
@@ -78,24 +79,25 @@ plugins:
   - social
   - search
   - glightbox
+  - extra-sass
   - macros:
       include_dir: snippets
-  - with-pdf:
-      author: Jason Hickey
-      # copyright: Copyright &copy; 2024 Jason Hickey.
-      cover: true
-      back_cover: true
-      cover_title: GSC STIG Manager
-      cover_subtitle: Installation Documentation
-      cover_logo: assets/images/banner.png
-      heading_shift: false
-      # exclude_pages:
-          # - 'usage/'
+  # - with-pdf:
+  #     author: Jason Hickey
+  #     # copyright: Copyright &copy; 2024 Jason Hickey.
+  #     cover: true
+  #     back_cover: true
+  #     cover_title: GSC STIG Manager
+  #     cover_subtitle: Installation Documentation
+  #     cover_logo: assets/images/banner.png
+  #     heading_shift: false
+  #     # exclude_pages:
+  #         # - 'usage/'
 
 markdown_extensions:
   - md_in_html
-
   - toc:
+      toc_depth : "1-1"
       title: "GSC STIG Manager"
   - pymdownx.highlight:
       anchor_linenums: true
@@ -151,4 +153,4 @@ extra_javascript:
   - javascripts/extra.js
 
 copyright: |
-  &copy; Copyright 2023 <a href="https://github.com/zephynyah"  target="_blank" rel="noopener">Jason Hickey</a>
+  &copy; 2023 <a href="https://github.com/"  target="_blank" rel="noopener">Jason Hickey</a>
